--- a/uasz-maintenance-frontend/src/index.html
+++ b/uasz-maintenance-frontend/src/index.html
@@ -1,15 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>UaszMaintenanceFrontend</title>
+  <title>Maintenance UASZ</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Icônes Material Icons -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+
+  <!-- Icônes Material Symbols arrondies (optionnel mais utile) -->
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,400,0,0"
+  />
+
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
